SDAP-467: Pagination (#261)
* pagination

* update openapi spec

* Fix for cdmslist bug in pagination PR (#263)

* Fix for cdmslist bug

* Fix for custom results type for cdmslist query

---------


* SDAP-473: Job priorization (#262)

* Update changelog

* job prioritization

* fix typo

* Add check for null __details

* remove unnecessary print statement

---------
