# analysis/webservice/apidocs/openapi.yml
@@ -536,6 +536,22 @@ paths:
             enum: ['CSV', 'NETCDF', 'JSON']
           example: CSV
         - in: query
+          name: pageNum
+          description: |
+            Page of results to retrieve.
+          required: false
+          schema:
+            type: integer
+          example: 1
+        - in: query
+          name: pageSize
+          description: |
+            Number of items to return in each page.
+          required: false
+          schema:
+            type: integer
+          example: 100
+        - in: query
           name: filename
           description: |
             Name of output file. Only works with CSV and NETCDF 
